<resources>
    <string name="app_name" translatable="false">AdminTFG</string>
    <string name="stringRememberUsername">Recordar usuario</string>
    <string name="stringButtonLogin">Entrar</string>
    <string name="stringButtonRegister">Registrarse</string>
    <string name="stringUserPlaceholder">Usuario</string>
    <string name="stringPasswordPlaceholder">Contraseña</string>
    <string name="stringSave">Guardar</string>
    <string name="stringSettings">Configuración</string>
    <string name="stringProducts">Productos</string>
    <string name="stringUsers">Usuarios</string>
    <string name="stringProfile">Perfil</string>
    <string name="stringOrders">Pedidos</string>
    <string name="stringMobile">Móvil</string>
    <string name="title_activity_new_product" translatable="false">NewProductActivity</string>
    <string name="productVisible">Mostrar producto</string>
    <string name="stringOrderInProgress">En progreso</string>
    <string name="stringOrderInDelivery">En reparto</string>
    <string name="stringOrderBuy">Comprar</string>
    <string name="stringOrderCancel">Cancelar</string>
    <string name="stringAdmin" translatable="false">Admin</string>
    <string name="stringRecommendedPrice" translatable="false">PVP</string>
    <string name="stringStock">En stock</string>
    <string name="stringNoStock">Sin stock</string>
    <string name="stringProductAdded">Producto añadido correctamente</string>
    <string name="stringNewProduct">Nuevo producto</string>
    <string name="stringNoEmptyName">El nombre no puede estar vacío</string>
    <string name="stringNoEmptyDescription">La descripción no puede estar vacía</string>
    <string name="stringNoEmptyPrice">El precio no puede estar vacío</string>
    <string name="stringNoEmptyStock">El stock no puede estar vacío</string>
    <string name="stringOrderConfirmed">Pedido confirmado correctamente</string>
    <string name="stringOrderCancelled">Pedido cancelado correctamente</string>
    <string name="stringOrderStatusUpdated">Estado del pedido actualizado correctamente</string>
    <string name="stringOrderDetails">Detalles del pedido</string>
    <string name="stringProductDetails">Detalles del producto</string>
    <string name="stringImage">Imagen</string>
    <string name="stringSignInCompleted">Registro completado</string>
    <string name="stringPasswordNotMatch">Las contraseñas no coinciden</string>
    <string name="stringEmptyName">Introduzca un valor para el nombre</string>
    <string name="stringEmptySurname">Introduzca un valor para el apellido</string>
    <string name="stringEmptyEmail">Introduzca un valor para el email</string>
    <string name="stringEmptyPhone">Introduzca un valor para el teléfono</string>
    <string name="stringEmptyAddress">Introduzca un valor para la dirección</string>
    <string name="stringEmptyPassword">Introduzca un valor para la contraseña</string>
    <string name="stringWrongUserOrPassword">Usuario y/o contraseña incorrectos</string>
    <string name="stringUserUpdated">Usuario actualizado con éxito</string>
    <string name="stringUpdateProfile">Editar perfil</string>
    <string name="stringProductDeleted">Producto eliminado correctamente</string>
    <string name="stringErrorProductDeleted">Error al eliminar el producto</string>
    <string name="stringProductUpdated">Producto editado correctamente</string>
    <string name="stringErrorProductUpdated">Error al editar el producto</string>
    <string name="stringUpdateProduct">Editar producto</string>

    <string name="placeholder_product_name">Nombre</string>
    <string name="placeholder_product_description">Descripción</string>
    <string name="placeholder_product_price">Precio</string>
    <string name="placeholder_product_stock">Stock</string>

    <string name="placeholder_user_name">Nombre</string>
    <string name="placeholder_user_surname">Apellidos</string>
    <string name="placeholder_user_email">Email</string>
    <string name="placeholder_user_phone">Teléfono</string>
    <string name="placeholder_user_address">Dirección</string>
    <string name="placeholder_user_password">Contraseña</string>
    <string name="placeholder_user_password_repeat">Repetir contraseña</string>
    <string name="content_description_product_image">Imagen del producto</string>

</resources>